--- a/smart-brain-master/src/index.css
+++ b/smart-brain-master/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Courier New", Courier, monospace;
-  background: linear-gradient(89deg, #FF5EDF 0%, #04C8DE 100%); /* w3c */
+  background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%); /* w3c */
 }
 
 button {
